# stargate

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CODING_STYLE.md  PARSE_LIMITATIONS.md  README.md  build.sh  install_build_tools.sh  pyproject.toml  setup.sh  stargate.yaml
common/: CMakeLists.txt  Command.cpp  Command.h  CommandExecutor.cpp  CommandExecutor.h  FileSet.cpp  FileSet.h  FileSetCollector.cpp  FileSetCollector.h  FileUtils.cpp  FileUtils.h  Panic.h
distrib/: AWSCLI.cpp  AWSCLI.h  AWSEC2Config.cpp  AWSEC2Config.h  AWSEC2Flow.cpp  AWSEC2Flow.h  CMakeLists.txt  DistribConfig.cpp  DistribConfig.h  DistribExecutor.cpp  DistribExecutor.h  DistribFlow.cpp  DistribFlow.h  DistribFlowManager.cpp  DistribFlowManager.h  SGCDist.cpp  SGCDist.h
docs/: FLOWS.md  JOURNAL.md  NETLIST.md  NETLIST_DISCUSSION.md  SGCDIST.md  SGCDISTRIB.md
examples/: stargate.yaml
examples/leds/: stargate.toml
examples/mini68k/: stargate.toml  stargate.yaml
examples/mini68k/rtl/alu/: mini68k_alu.v  mini68k_barrel_shifter.v
examples/mini68k/rtl/control/: mini68k_control.v  mini68k_decoder.v  mini68k_exception.v
examples/mini68k/rtl/core/: mini68k_pkg.v  mini68k_top.v
examples/mini68k/rtl/memory/: mini68k_bus_ctrl.v  mini68k_prefetch.v
examples/mini68k/rtl/registers/: mini68k_pc.v  mini68k_registers.v  mini68k_sr.v
examples/mini68k/testbench/: tb_mini68k_alu.v  tb_mini68k_top.v
examples/vivado/: stargate.toml  top.v
flow/: CMakeLists.txt  Flow.cpp  Flow.h  FlowManager.cpp  FlowManager.h  FlowSection.cpp  FlowSection.h  FlowTask.cpp  FlowTask.h  TaskStatus.cpp  TaskStatus.h  VivadoFlow.cpp  VivadoFlow.h
project/: CMakeLists.txt  ProjectConfig.cpp  ProjectConfig.h  ProjectTarget.cpp  ProjectTarget.h
regress/: CMakeLists.txt
regress/RTLLM/: CMakeLists.txt  run.sh
regress/awsec2_infra_dry/: CMakeLists.txt  run.sh  stargate.toml
regress/awsec2_infra_dry/.run/: stargate.toml
regress/designs/: CMakeLists.txt
regress/designs/aes/: CMakeLists.txt  run.sh
regress/designs/darkriscv/: CMakeLists.txt  run.sh
regress/designs/ddr2_controller/: CMakeLists.txt  run.sh
regress/designs/ibex/: CMakeLists.txt  expected_fails.txt  run.sh
regress/designs/iwls2005/: CMakeLists.txt  expected_fails.txt  run.sh
regress/designs/mini68k/: CMakeLists.txt  run.sh
regress/designs/mips_neelkshah/: CMakeLists.txt  run.sh
regress/designs/openmsp430/: CMakeLists.txt  run.sh
regress/designs/picorv32/: CMakeLists.txt  run.sh
regress/designs/sha256/: CMakeLists.txt  run.sh
regress/sgcdist_basic/: CMakeLists.txt  command.sh  run.sh
regress/verilog_parse/: CMakeLists.txt  case_stmt.v  empty_module.v  flop.v  function_task.v  gates.v  mixed.v  params.v  run.sh  verilog_parse_fail.v
regress/vivado_test/: CMakeLists.txt  run.sh  stargate.toml  top.v
src/: CMakeLists.txt
src/common/: CMakeLists.txt  FatalException.h  FileUtils.cpp  FileUtils.h  Panic.h
src/cores/: CMakeLists.txt  CoreConfig.cpp  CoreConfig.h
src/project/: CMakeLists.txt  ProjectConfig.cpp  ProjectConfig.h  ProjectTarget.cpp  ProjectTarget.h
src/python/stargatecompiler/: __init__.py
src/stargate/: CMakeLists.txt  Stargate.cpp  StargateConfig.cpp  StargateConfig.h
src/tools/stargate/: CMakeLists.txt  Stargate.cpp
stargate/: CMakeLists.txt  Stargate.cpp  Stargate.h  StargateConfig.cpp  StargateConfig.h
tools/: CMakeLists.txt
tools/sgcdist/: CMakeLists.txt  Sgcdist.cpp
tools/sgcparse/: CMakeLists.txt  SgcParse.cpp
tools/stargate/: CMakeLists.txt  Stargate.cpp
verilog/: CMakeLists.txt  Lexer.l  PLAN.md  ParseException.h  Parser.y  Preprocessor.cpp  Preprocessor.h  VerilogDriver.cpp  VerilogDriver.h
